--- a/reservation.html
+++ b/reservation.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kakao Map with Modal</title>
-    <style>
+<!-- Google Material Icons 폰트 로드 -->
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+<style>
       body {
         display: flex;
         justify-content: center; /* 수평 가운데 정렬 */
@@ -91,12 +93,12 @@
       </section>
       <footer>
         <ul>
-          <li><a href="index.html" id="back">홈</a></li>
-          <li><a href="search.html" id="search">검색</a></li>
-          <li><a href="reservation.html" id="reservation">예약</a></li>
-          <li><a href="profile.html" id="profile">회원정보</a></li>
+            <li><a href="index.html" id="back"><span class="material-symbols-outlined">home</span>홈</a></li>
+            <li><a href="search.html" id="search"><span class="material-symbols-outlined">search</span>검색</a></li>
+            <li><a href="reservation.html" id="reservation"><span class="material-symbols-outlined">event</span>예약</a></li>
+            <li><a href="profile.html" id="profile"><span class="material-symbols-outlined">person</span>회원정보</a></li>
         </ul>
-      </footer>
+    </footer>
     </div>
     <script>
       const exUserId = 1;
