--- a/search.html
+++ b/search.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kakao Map with Modal</title>
+    <!-- Google Material Icons 폰트 로드 -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <style>
       body {
         display: flex;
@@ -144,46 +146,47 @@
         </div>
       </section>
       <footer>
-        <ul>
-          <li><a href="index.html" id="back">홈</a></li>
-          <li><a href="search.html" id="search">검색</a></li>
-          <li><a href="reservation.html" id="reservation">예약</a></li>
-          <li><a href="profile.html" id="profile">회원정보</a></li>
-        </ul>
+        <footer>
+          <ul>
+              <li><a href="index.html" id="back"><span class="material-symbols-outlined">home</span>홈</a></li>
+              <li><a href="search.html" id="search"><span class="material-symbols-outlined">search</span>검색</a></li>
+              <li><a href="reservation.html" id="reservation"><span class="material-symbols-outlined">event</span>예약</a></li>
+              <li><a href="profile.html" id="profile"><span class="material-symbols-outlined">person</span>회원정보</a></li>
+          </ul>
       </footer>
     </div>
     <script>
       function searchData() {
-        const searchData = document.getElementById("searchInput").value;
-        const ulElement = document.getElementById("list");
-
-        fetch(`http://127.0.0.1:8002/stores/${searchData}`)
-          .then((response) => {
-            if (!response.ok) {
-              throw new Error("Network response was not ok");
-            }
-            return response.json();
-          })
-          .then((data) => {
-            document.getElementById("list").innerText = "";
-            for (i = 0; i < data.length; i++) {
-              const newLiElement = document.createElement("li");
-              newLiElement.innerText = `${data[i].store_name}  ${data[i].name} ${data[i].price}\n`;
-              ulElement.appendChild(newLiElement);
-            }
-          })
-          .catch((error) => {
-            console.error(
-              "There has been a problem with your fetch operation:",
-              error
-            );
-          });
-          document.getElementById("searchInput").addEventListener("keydown", function(event) {
-        if (event.key === "Enter") {
-          searchData();
-        }
-      });
+          const searchData = document.getElementById("searchInput").value;
+          const ulElement = document.getElementById("list");
+  
+          fetch(`http://127.0.0.1:8002/stores/${searchData}`)
+              .then((response) => {
+                  if (!response.ok) {
+                      throw new Error("Network response was not ok");
+                  }
+                  return response.json();
+              })
+              .then((data) => {
+                  ulElement.innerText = "";
+                  for (let i = 0; i < data.length; i++) {
+                      const newLiElement = document.createElement("li");
+                      newLiElement.innerText = `${data[i].store_name} ${data[i].name} ${data[i].price}\n`;
+                      ulElement.appendChild(newLiElement);
+                  }
+              })
+              .catch((error) => {
+                  console.error("There has been a problem with your fetch operation:", error);
+              });
       }
-    </script>
+  
+      // 엔터 키를 눌렀을 때 searchData 함수를 호출하도록 이벤트 리스너 추가
+      document.getElementById("searchInput").addEventListener("keydown", function (event) {
+          if (event.key === "Enter") {
+              searchData();
+          }
+      });
+  </script>
+  
   </body>
 </html>
